assets/css/challenge1.css
* {
    margin: 0;
    padding: 0;
    box-sizing: border-box;
}


body {
    background-color:rgba(204, 204, 204, 0.801);
    font-family: Helvetica, Arial, sans-serif;
}

header {
  padding: 20px 30px ;
  display: flex;
  justify-content: space-between;
  flex-wrap: wrap;
  position: relative;
  top: 0;
  border-style: 6px solid rgb(0, 0, 0);
  background-image: url("https://www.onlyinyourstate.com/wp-content/uploads/2019/03/CO-GettyImages-520774787-o.jpg");
  background-size: cover;
  background-position: center;
  background-attachment: fixed;
  background-position: 80%;
}

header h1 {
  font-weight: bold;
  font-size: 2.0vw;
  display: inline;
  text-shadow: 0 0 10px rgba(0, 0, 0, 0.726);
  color: white;
  display: flex;
  flex-wrap: wrap;
  justify-content: flex-start;
  background: rgb(19, 19, 0);
  padding: 15px 5px 5px 5px;
  border-radius: 15px;
}

header nav {
  margin: 7px 0;
  text-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
}

header nav ul {
  display: flex;
  flex-wrap: wrap;
  justify-content: flex-end;
  align-items: center;
  list-style: none;
  text-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
}

header nav ul li a {
  display: flex;
  flex-wrap: wrap;
  justify-content: space-around;
  padding: 10px 15px;
  font-weight: lighter;
  font-size: 1.55vw;
  text-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
  text-align: center;
  color: rgb(255, 255, 255);
}

header nav ul li a:hover {
  background: rgb(0, 0, 0);
  color:rgb(255, 255, 255);
  border-radius: 15px;
  text-shadow: none;
}

.hero {
  background-image:url("../images/hero-bg.jpg");
  height: 200px;
  background-size: cover;
  background-position: center;
  position: relative;
  display: flex;
  justify-content: center;
  flex-wrap: wrap;
  align-items: flex-start;
}


.hero h3 {
  text-align: right;
display: flex;
flex-wrap: wrap;
justify-content:space-around;
color: white;
font-size: 1.0vw;
padding: 160px 20px 10px 200px;
position:absolute;
}

.flex-row {
  display: flex;
}

.info p {
  padding: 5px 20px;
  margin: 5px 10px;
  text-align: left;
  display: flex;
  flex-wrap: wrap;
  justify-content: flex-end;
}

.info h2{
  margin: 10px 5px;
  min-width: 120px;
  max-width: 120px;
  display: flex;
  flex-wrap: wrap;
  justify-content: flex-start;
  border-right: 4px solid black;
}

.info ul {
  padding: 20px;
  background: black;
}

.info ul li {
  display: flex;
  flex-wrap: wrap;
  justify-content: center;
  display: inline;
  padding: 10px;
  margin: 0 auto;
  font-weight: bolder;
  color: rgb(255, 250, 250);
}

.containers {
  position: relative;
  left: 10px;
  right: 10px;
  width: 80%;
  height: 60%;
}

.container2 , .container3 {
  position: relative;
}

.flex-container{
  display: flex;
}

.flex-container .container2 , .flex-container .container3{
  flex: 1;
  width: 40%;
}

.container1 h1 {
  position: absolute;
  top: 16px;
  left: 10px;
  color: rgb(255, 255, 255);
  background: rgb(0, 0, 0);
}

.container2 h2 , .container3 h2{
  font-size: 14px;
  position: absolute;
  top:8px;
  left :10px;
  color: white;
  background: black;
  padding: 2px;
  
}

.container1 img{
  width: 100%;
  height: auto;
  border: 5px solid black;
  opacity: 50%;
}

.container1 img:hover , .container2 img:hover , .container3 img:hover{
  opacity: 100%;
}

.container2 img , .container3 img{
  width: 90%;
  height: 80%;
  border: 5px solid rgb(0, 0, 0);
  margin: 10px 5px;
  opacity: 50%;
}

.resume img {
  width: 100%;
  height: auto;
}

aside {
  display: flex;
  flex-wrap: wrap;
  justify-content: space-around;
  width: 100%;
}

#cinfo {
width: 100%;
margin: auto 10px;;
}

#imgresume {
  display: flex;
  flex-wrap: wrap;
  justify-content: center;
  width: 80%;
  margin: 10px 10px;
}

@media screen and (max-width: 980px) {
  .section {
    padding: 30px 15px;
  }
  
  .info h2 {
    flex: 1 100%;
    text-align: left;
  }
  
  .info p {
    flex: 2 100%;
  }
  
  .info img {
    flex: 0 32%;
    margin-right: 0;
    margin-top: 15px;
    margin-bottom: 15px;
  }
}

   

@media screen and (max-width: 768px) {
  .section {
    padding: 30px 15px;
  }
    
  .info h2 {
    flex: 1 100%;
    text-align: left;
  }
    
  .info p {
    flex: 2 100%;
  }
    
  .info img {
    flex: 0 32%;
    margin-right: 0;
    margin-top: 15px;
    margin-bottom: 15px;
  }
}

@media screen and (max-width: 575px) {

  .section {
    padding: 30px 15px;
  }
  
  .info h2 {
      flex: 1 100%;
      text-align: left;
  }
  
  .info p {
      flex: 2 100%;
  }
  
  .info img {
      flex: 0 32%;
      margin-right: 0;
      margin-top: 15px;
      margin-bottom: 15px;
  }

  .contact-info {
    text-align: center;
    flex-wrap: wrap;
    display: flex;
  }
  
  .contact-info > * {
    flex-wrap: wrap;
    justify-content:center;
  }
     
  .contact-form {
    order: 3;
  }
} 

